--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -86,7 +86,7 @@
                 <div id="u4" class="ax_default label">
                     <div id="u4_div" class=""></div>
                     <div id="u4_text" class="text ">
-                        <p><span>便捷数据字典展示&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> <span><a href="history.action" style="color: #3ad900">历史记录</a></span></p>
+                        <p><span>便捷数据字典展示&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> <span><a href="" style="color: #3ad900"></a></span></p>
                     </div>
                 </div>
 
@@ -214,7 +214,7 @@
                 <div id="u22" class="ax_default label">
                     <div id="u22_div" class=""></div>
                     <div id="u22_text" class="text ">
-                        <p><span>©2019 成都天融汇金融服务外包有限公司</span></p>
+                        <p><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;©2022 南京银行科技股份有限公司</span></p>
                     </div>
                 </div>
             </div>
