--- a/src/main/resources/templates/table_list.html
+++ b/src/main/resources/templates/table_list.html
@@ -44,8 +44,8 @@
                 <div class="ibox-content">
                     <div class="row">
                         <div class="col-sm-9 m-b-xs">
-                            <a data-toggle="modal" class="btn btn-success" href="/table_list.html#">
-                                <i class="fa fa-plus"></i>导出数据字典
+                            <a data-toggle="modal" class="btn btn-success" href="/table_list.html#" id="export">
+                                导出数据字典
                             </a>
                         </div>
                         <div class="col-sm-3">
@@ -60,8 +60,8 @@
                         <table class="table table-striped">
                             <thead>
                             <tr>
-                                <th>表中文名</th>
                                 <th>表英文名</th>
+                                <th>表中文名</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -158,9 +158,16 @@
             document.write(result);
         });
     });
-    //模糊查询
+    //导出数据字典
 
-
+    var ip = sessionStorage.getItem("ip");
+    var port = sessionStorage.getItem("port");
+    var database = sessionStorage.getItem("database");
+    var username = sessionStorage.getItem("username");
+    var password = sessionStorage.getItem("password");
+    var selector = sessionStorage.getItem("selector");
+    var d=document.getElementById("export");
+    d.href="/exportDict?ip="+ip+"&port="+port+"&dbName="+database+"&username="+username+"&password="+password+"&selector="+selector;
 </script>
 
 <script type="text/javascript" src="http://tajs.qq.com/stats?sId=9051096" charset="UTF-8"></script>
